# qds

./: .gitignore  LICENSE  README.md  pyproject.toml
qds/: __init__.py  cli.py  config.py  constants.py  log.py  symbols.py
qds_run/: __init__.py  cli.py  constants.py  log.py  main.py  runner.py
